--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pipenv pytest-cov
+        pip install pipenv
         pip install git+https://github.com/aoki-h-jp/mexc-bulk-downloader
         pipenv install --dev  # Pipenvを使用して依存関係をインストール
 
