--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-addopts = -v --cov=mexc_bulk_downloader --cov-report term-missing
+;addopts = -v --cov=mexc_bulk_downloader --cov-report term-missing
 testpaths = tests
